# nn-rank

./: .gitignore  pyproject.toml  readme.md
calculate_unks/: calculate_unks.py
calculate_unks/scripts/: calculate_unks_pos.sh
configs/training_configs/: pos_finetune_with_eval_config.yaml
ma_utils/: bible_utils.py  experiment_utils.py  helper_functions.py  metrics.py  ner_utils.py  pos_utils.py
ma_utils/custom_datasets/: ner_datasets.py  ner_error_results.txt  pos_datasets.py  test_ner_dataset.sh  test_pos_dataset.sh
ma_utils/ner_file_iso_maps/: langrank_supported_train_folders  langrank_test_all_folders  langrank_test_large_folders  langrank_test_medium_folders  langrank_train_large_folders  langrank_train_medium_folders  ner_lang_maps.py
ner/: process_ner_logs.py  run_evaluation_ner_efficient.py  run_finetuning_ner.py
nn_calculations/: embedding_nn_efficient.py  extract_hidden_reps_nn.py  extract_hidden_reps_nn_efficient.py  process_nn_outputs.py  process_nn_outputs_data_ablation.py
nn_calculations-mwe/: embedding_nn_efficient.py  extract_hidden_reps_nn_efficient.py  process_nn_outputs.py  startup.sh
nnrank/: pyproject.toml
nnrank/example_scripts/: usage_in_memory.py  usage_stream_save.py
nnrank/mwe_bibles/mwe_data/source_pool/: grc-x-bible-textusreceptusVAR1-v1.txt
nnrank/mwe_bibles/mwe_data/target_datasets/: fij-x-bible-fij-v1.txt  nno-x-bible-2011-v1.txt
nnrank/src/nnrank/: ranker.py
nnrank/tests/: test_ranker.py
perplexity/: calculate_perplexity.py
pos/: process_pos_logs.py  run_evaluation_pos_efficient.py  run_finetuning_pos.py
(+110 files in other folders)
