[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ma_utils"
version = "0.1.0"
description = "helper functions for multilingual_analysis"
authors = [
    { name = "Abteen Ebrahimi" }
]
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ma_utils*"]