[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnrank"
version = "0.1.0"
description = "Model-Based Ranking of Source Languages for Cross-Lingual Transfer"
authors = [
    { name = "Abteen Ebrahimi" }
]
dependencies = [
    "transformers",
    "torch",
    "numpy",
    "faiss-cpu",
    "tqdm"
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]